# escenarios-politicos

./: .env.example  .gitignore  .prettierignore  .prettierrc.mjs  LICENSE  README.EN.md  README.md  doctor.config.json  eslint.config.mjs  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.json
app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
components/: AnimatedNumber.tsx  BrandMark.tsx  CasoCredibilidadPanel.tsx  CasoFlags.tsx  CasoLiveMetrics.tsx  CasoMencionesClient.tsx  CasoMetricsGrid.tsx  CasosHomeClient.tsx  CasosPageClient.tsx  ContextoTransicion.tsx  CountrySwitcher.tsx  CredibilidadDesgloseChart.tsx  CredibilidadDesgloseChartInner.tsx  CrossGrid.tsx  EmptyState.tsx  EscenariosLive.tsx  EvidenciaBadge.tsx  FuentesMencionesClient.tsx  GapsCasosLive.tsx  GapsGrid.tsx  GapsIngestErrors.tsx  GapsOpsSummary.tsx  HomeHero.tsx  HomeSituacional.tsx  IndicadoresPanel.tsx  LiveCasos.tsx  LiveMenciones.tsx  MarkdownEvidence.tsx  MotionProvider.tsx  PageAtmosphere.tsx  PageHeader.tsx  PageTransition.tsx  PlaybookDocView.tsx  PlaybookSidebar.tsx  PoderMap.tsx  PoderMapLoader.tsx  SiteHeader.tsx  SkipLink.tsx  motion.tsx
content/: fuentes_registro.json
examples/: ejemplo-informe.md
lib/: areas.ts  brand.ts  casos-catalog.test.ts  casos-catalog.ts  consolidar-caso.test.ts  consolidar-caso.ts  countries.test.ts  countries.ts  credibilidad.test.ts  credibilidad.ts  data.ts  ease.ts  evidencia.test.ts  (+25 more)
(+97 files in other folders)
