[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "escenarios-politicos"
version = "0.1.0"
description = "Metodología y scripts para análisis de escenarios de transición política"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FraVelz" }]
dependencies = [
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
